--- a/onlyto/skystar.html
+++ b/onlyto/skystar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>今晚的星空只为你一人闪烁</title>
+    <title>生日快乐</title>
     <style>
       #videofilm {
         width: 100%;
@@ -29,9 +29,14 @@
       <h1>look at the stars</h1>
     </div>
     <div class="text">
-      <h1>These stars twinkle only for you</h1>
+      <h1>These stars twinkle for you</h1>
     </div>
-    
+    <div class="texttwo", style = "width: 130px; height: 390px">
+      <h1>Happy</h1>
+    </div>
+    <div class="textthree", style = "width: 130px; height: 390px">
+      <h1>Brithday!!!</h1>
+    </div>
     <div class="container"></div>
     <script src="js/skystar.js"></script>
     
