--- a/onlyto/skystar.html
+++ b/onlyto/skystar.html
@@ -26,16 +26,10 @@
       <source src="video/skystar.mp4" type="video/mp4">
     </video>
     <div class="textone">
-      <h1>look at the stars</h1>
+      <h1>Happy Birthday !!!</h1>
     </div>
     <div class="text">
       <h1>These stars twinkle for you</h1>
-    </div>
-    <div class="texttwo", style = "width: 130px; height: 390px">
-      <h1>Happy</h1>
-    </div>
-    <div class="textthree", style = "width: 130px; height: 390px">
-      <h1>Brithday!!!</h1>
     </div>
     <div class="container"></div>
     <script src="js/skystar.js"></script>
